Version 4.27 -  4 May 2011, by Per Øyvind Karlsen

- fix proper return of 'src' as arch for src.rpms
- fix confusion between %{sourcerpm} & %{sourcepackage} tags

Version 4.26 -  3 May 2011, by Per Øyvind Karlsen

- fix really odd issue with recognizing src.rpms

Version 4.25 -  3 May 2011, by Per Øyvind Karlsen

- start using gnu99
- fix some invalid free()s

Version 4.24 -  3 May 2011, by Per Øyvind Karlsen

- fix segfault caused by attempting to assign arch of wrong package

Version 4.23 -  3 May 2011, by Per Øyvind Karlsen

- check for termination signals so ie. that installs can be aborted with ^C
- fix remaining memleaks
- check that rpmdb was properly opened in read/write mode to prevent segfault
  if no write permissions

Version 4.22 - 26 April 2011, by Per Øyvind Karlsen

- add support for notriggers
- add support for nofdigests
- fix getting expected NVRA tag
- fix possible breakage when trying to load non-existant dependency flags
- fix provide flags not being loaded for headers read from rpm files

Version 4.21 - 23 April 2011, by Per Øyvind Karlsen

- fix a missing null terminator at end of @info@ string regression, causing
  random data to be appended at end of line

Version 4.20 - 22 April 2011, by Per Øyvind Karlsen

- merge in some DUDF changes from Alexandre Lissy
- add disttag & distepoch to @info@ in synthesis for easier parsing

Version 4.19 - 31 March 2011, by Per Øyvind Karlsen

- fix regression caused by memleak fix in previous release

Version 4.18 - 31 March 2011, by Per Øyvind Karlsen

- fix memleak in URPM::Pkg->evr()
- drop URPM::DB::close() and teardown properly by calling rpmcliFini() at exit
- fix odd i586 specific bug triggering segfault with -fstack-protector (#61690)

Version 4.17 - 30 March 2011, by Per Øyvind Karlsen

- fix conversion to older hash database format resulting in "missing" package
  from rpmdb

Version 4.16 - 29 March 2011, by Per Øyvind Karlsen
